<resources>
    <string name="app_name">ConferenceManager</string>

    <!-- Strings related to login -->
    <string name="content_authority">com.allattentionhere</string>
    <string name="prompt_email">Email</string>
    <string name="rb_doctor">Doctor</string>
    <string name="rb_admin">Admin</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">Name is too short</string>
    <string name="error_invalid_age">Age is Invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
